--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -7,7 +7,7 @@
     h1{
         padding: 20px;
         a{
-          color: white;
+          color: rgb(29, 10, 10);
           font-family: 'Oleo Script', cursive;
           font-size: 2.5rem;
         }
@@ -29,7 +29,7 @@
           a{
             display: block;
             text-decoration: none;
-            color: white;
+            color: rgb(29, 10, 100);
             font-weight: bold;
             font-size: 1.5rem;
           }
@@ -95,7 +95,7 @@
       margin-bottom: 5px;
       position: relative;
       
-      background: white;
+      background: rgb(226, 192, 192);
       border-radius: 3px;
       
       z-index: 1;
