--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
 ---
 ---
 
-@import "base", "background", "header", "sidebar", "home", "post", "archive", "player";
+@import "base", "header", "sidebar", "home", "post", "archive", "player";
