--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,9 +33,10 @@ layout: default
         {% if page.videoid %}
                 {% include video.html videoid = page.videoid %}
         {% endif %}
-        {% assign shows = page.shows %}
-        {% for show in shows %}
-        {{ show }}
+
+        {% assign tags = page.tags %}
+        {% for tag in tags %}
+        <h3>{{ tag }}</h3>
         {% endfor %}
 
         {{ content }}
