--- a/_layouts/podcast.html
+++ b/_layouts/podcast.html
@@ -37,7 +37,7 @@ layout: default
   {% if post.cover %}
           <img src="{{post.cover}}" alt="Podcast Cover">
   {% else %}
-          <img src="{{ "/assets/img/Podcast_Cover_500.jpg" | absolute_url}}" alt="Podcast Cover" max-width="16px">
+          <img src="{{ "/assets/img/portfolio/submarine.png" | absolute_url}}" alt="Podcast Cover" max-width="16px">
   {% endif %}
   <section class="post-content">
   {% if page.bootstrap %}
