--- a/_layouts/podcast.html
+++ b/_layouts/podcast.html
@@ -36,6 +36,9 @@ layout: default
   {% if post.cover %}
           <img src="{{post.cover}}" alt="Podcast Cover">
   {% endif %}
+  {% if page.cover %}
+          <img src="{{page.cover}}" alt="Podcast Cover">
+  {% endif %}
   <section class="post-content">
   {% if page.bootstrap %}
     <div class="bootstrap-iso">
