--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -70,12 +70,12 @@ $base06: #dfe1e8 !default;
 $base07: #eff1f5 !default;
 $base08: #bf616a !default;
 $base09: #d08770 !default;
-$base0A: #ebcb8b !default;
-$base0B: #a3be8c !default;
-$base0C: #96b5b4 !default;
-$base0D: #8fa1b3 !default;
-$base0E: #b48ead !default;
-$base0F: #ab7967 !default;
+$base0a: #ebcb8b !default;
+$base0b: #a3be8c !default;
+$base0c: #96b5b4 !default;
+$base0d: #8fa1b3 !default;
+$base0e: #b48ead !default;
+$base0f: #ab7967 !default;
 
 // base16 Material Theme
 // $base00: #302f2d !default; // Default Background
