--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -24,9 +24,9 @@ $sm-break: 576px;
 $x-sm-break: 300px;
 
 // Brand colours
-$theme-color: #337ab7;
-$brand-color: #fff;
-$background-color: #fff;
+$theme-color: #04a1ff;
+$brand-color: #065fd4;
+$background-color: #141414;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
