--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -30,8 +30,8 @@ $background-color: #141414;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
-$text-color: #262626;
-$meta: #595959; //lowest gray for accessible color
+$text-color: #065fd4;
+$meta: #04a1ff; //lowest gray for accessible color
 $link-color: $theme-color;
 $selection-color: #D4D4D4; // visible when highlighting text
 $blockquote-color: #EEF7FA; // $background-color;
