--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -39,7 +39,7 @@ $blockquote-color: #EEF7FA; // $background-color;
 // Header
 $header-background-color: darken($theme-color, 50%); // Only used when no header image
 $header-text-color: #fff;
-$header-link-color: #383838;
+$header-link-color: #8a8a8a;
 $navbar-separator-opacity: 0;
 
 // Feature image for articles
